--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 body {
   margin: 0;
   overflow-x: hidden;
-  background: #EFEFEF;
+  background: #efefef;
 }
 
 .header {
@@ -38,7 +38,7 @@ body {
 }
 
 .header .header-left {
-  width: 70%;
+  width: 535px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,10 +47,14 @@ body {
           align-items: center;
 }
 
+.header .header-left .btn-hamburger {
+  display: none;
+}
+
 .header .header-left .logo {
   margin: 0.5rem;
   border-radius: 3px;
-  width: 60px;
+  width: 50px;
   height: 40px;
   background-color: black;
   color: white;
@@ -68,6 +72,7 @@ body {
 }
 
 .header .header-left .search-input {
+  margin-left: 10px;
   width: 420px;
   height: 40px;
   border-radius: 5px;
@@ -80,7 +85,7 @@ body {
 
 .header .header-left .search-input[type="search"]:focus {
   outline-style: none;
-  border: 2px solid #3B49DF;
+  border: 2px solid #3b49df;
 }
 
 .header .header-left .btn-search {
@@ -151,5 +156,47 @@ body {
 .header .header-right .btn-log:hover {
   background: #e7e7e7;
   border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .header .header-left .search-input {
+    display: none;
+    width: 0;
+  }
+  .header .header-left .btn-hamburger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border: none;
+    height: 40px;
+    width: 40px;
+    background: none;
+  }
+  .header .header-left .btn-hamburger svg {
+    height: 30px;
+    width: 30px;
+  }
+  .header .header-left .btn-hamburger:hover {
+    background: #e7e7e7;
+    border-radius: 50%;
+  }
+  .header .header-left .btn-search {
+    position: initial;
+    margin-left: auto;
+  }
+  .header .header-left .btn-search svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .header .header-left .header-right {
+    max-width: 140px;
+  }
+  .header .header-left .header-right .btn-log {
+    display: none;
+    width: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
