--- a/css/style.css
+++ b/css/style.css
@@ -14,31 +14,66 @@ html {
 body {
   margin: 0;
   overflow-x: hidden;
-  background: #efefef;
+  min-width: 250px;
+}
+
+.btn-log {
+  border: none;
+  height: 40px;
+  width: 65px;
+  color: #3b49df;
+  background: none;
+}
+
+.btn-account {
+  border: none;
+  color: white;
+  height: 40px;
+  border-radius: 5px;
+  width: 130px;
+  background: #3b49df;
+}
+
+.btn-account:hover {
+  background: #323ebe;
+}
+
+.btn-log:hover {
+  background: #e7e7e7;
+  border-radius: 5px;
 }
 
 .header {
+  background-color: white;
+  border-bottom: 1.5px solid #bbbbbb;
+  max-width: 100vw;
+  height: 56px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+.header .header-sec {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-left: auto;
+  background-color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 1.5px solid #bbbbbb;
-  max-width: 100vw;
+  border-bottom: 1.5px solid #bbbbbb;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: -webkit-sticky;
-  position: sticky;
   height: 56px;
-  z-index: 100;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-.header .header-left {
-  width: 535px;
+.header .header-sec .header-left {
+  width: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,11 +82,11 @@ body {
           align-items: center;
 }
 
-.header .header-left .btn-hamburger {
+.header .header-sec .header-left .btn-hamburger {
   display: none;
 }
 
-.header .header-left .logo {
+.header .header-sec .header-left .logo {
   margin: 0.5rem;
   border-radius: 3px;
   width: 50px;
@@ -71,7 +106,7 @@ body {
   cursor: pointer;
 }
 
-.header .header-left .search-input {
+.header .header-sec .header-left .search-input {
   margin-left: 10px;
   width: 420px;
   height: 40px;
@@ -79,16 +114,16 @@ body {
   border: 0.5px solid #c9c9c9;
 }
 
-.header .header-left .search-input:hover {
+.header .header-sec .header-left .search-input:hover {
   border: 1px solid #888888;
 }
 
-.header .header-left .search-input[type="search"]:focus {
+.header .header-sec .header-left .search-input[type="search"]:focus {
   outline-style: none;
   border: 2px solid #3b49df;
 }
 
-.header .header-left .btn-search {
+.header .header-sec .header-left .btn-search {
   border: none;
   background: none;
   width: 2.3rem;
@@ -106,17 +141,17 @@ body {
           justify-content: center;
 }
 
-.header .header-left .btn-search svg {
+.header .header-sec .header-left .btn-search svg {
   width: 1.5rem;
   height: 1.5rem;
 }
 
-.header .header-left .btn-search:hover {
+.header .header-sec .header-left .btn-search:hover {
   background: #e7e7e7;
   border-radius: 50%;
 }
 
-.header .header-right {
+.header .header-sec .header-right {
   width: 240px;
   height: inherit;
   margin-right: 1rem;
@@ -132,38 +167,301 @@ body {
   gap: 15px;
 }
 
-.header .header-right .btn-log {
-  border: none;
-  height: 40px;
-  width: 65px;
+.container-prin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.aside-left {
+  height: 100vh;
+  width: 221px;
+  min-width: 220px;
+}
+
+.aside-left .dev-com {
+  background-color: white;
+  height: 350px;
+  border-radius: 5px;
+  margin: 5px;
+  border: 0.1px solid #e7e7e7;
+  padding: 15px;
+}
+
+.aside-left .dev-com h5 {
+  line-height: 30px;
+  font-size: 19px;
+}
+
+.aside-left .dev-com a {
+  font-size: 18px;
   color: #3b49df;
-  background: none;
+  text-decoration: none;
 }
 
-.header .header-right .btn-account {
-  border: none;
-  color: white;
+.aside-left .dev-com p {
+  color: #424040;
+}
+
+.aside-left .dev-com .aside-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 5px;
+}
+
+.aside-left .dev-com .aside-btn .btn-account {
+  width: 100%;
+}
+
+.aside-left .list-a {
+  margin: 5px;
+  padding: 15px;
+}
+
+.aside-left .list-a div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 40px;
+}
+
+.aside-left .list-a div span {
+  display: block;
+  width: 40px;
+}
+
+.aside-left .list-a div a {
+  text-decoration: none;
+  color: black;
+}
+
+.aside-right {
+  height: 100vh;
+  width: 221px;
+  min-width: 220px;
+}
+
+.aside-right .dev-is {
+  background-color: white;
+  height: 350px;
   border-radius: 5px;
-  width: 130px;
-  background: #3b49df;
+  margin: 5px;
+  border: 0.1px solid #e7e7e7;
+  padding: 15px;
 }
 
-.header .header-right .btn-account:hover {
-  background: #323ebe;
+.container-sec {
+  height: 100vh;
+  width: 100vw;
+  max-width: 650px;
+  min-width: 430px;
 }
 
-.header .header-right .btn-log:hover {
+.container-sec nav {
+  height: 43px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container-sec nav a {
+  width: 100px;
+  height: 43px;
+  font-size: 1.2rem;
+  color: black;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container-sec nav a:hover {
+  border-radius: 5px;
   background: #e7e7e7;
+  color: #323ebe;
+}
+
+.container-sec .card {
+  margin-top: 10px;
+  background: white;
+  width: auto;
+  height: 250px;
   border-radius: 5px;
+  padding: 15px;
+}
+
+.container-sec .card .div-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-sec .card .div-head img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.container-sec .card .div-head .info-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container-sec .card .div-head .info-card .name-profile {
+  text-decoration: none;
+  color: slategray;
+  font-weight: 600;
+}
+
+.container-sec .card .div-head .info-card span {
+  color: slategray;
+  font-size: small;
+}
+
+.container-sec .card .container-card {
+  margin-left: 35px;
+}
+
+.container-sec .card .container-card .sub-title {
+  margin-top: 15px;
+}
+
+.container-sec .card .container-card .sub-title a {
+  color: black;
+  text-decoration: none;
+}
+
+.container-sec .card .container-card .sub-title a:hover {
+  color: #323ebe;
+}
+
+.container-sec .card .container-card .tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+}
+
+.container-sec .card .container-card .tags a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  color: slategray;
+  height: 30px;
+  width: 80px;
+}
+
+.container-sec .card .container-card .tags a:hover {
+  background: #e7e7e7;
+  border: solid 0.1px #afafaf;
+  border-radius: 5px;
+  color: black;
+}
+
+.container-sec .card .container-card .footer-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 320px;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-left a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  color: slategray;
+  height: 36px;
+  width: 150px;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-left a:hover {
+  background-color: #e7e7e7;
+  border-radius: 5px;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-right span {
+  color: slategray;
+  font-size: smaller;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-right .btn-save {
+  height: 36px;
+  width: 50px;
+  border: none;
+  background: #bdbdbd;
+  color: #0a0a0a;
+  border-radius: 5px;
+}
+
+.container-sec .card .container-card .footer-card .fot-card-right .btn-save:hover {
+  background-color: #9b9b9b;
 }
 
 @media (max-width: 768px) {
-  .header .header-left .search-input {
+  .header .header-sec .header-left .search-input {
     display: none;
     width: 0;
   }
-  .header .header-left .btn-hamburger {
+  .header .header-sec .header-left .btn-hamburger {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -175,28 +473,49 @@ body {
     width: 40px;
     background: none;
   }
-  .header .header-left .btn-hamburger svg {
+  .header .header-sec .header-left .btn-hamburger svg {
     height: 30px;
     width: 30px;
   }
-  .header .header-left .btn-hamburger:hover {
+  .header .header-sec .header-left .btn-hamburger:hover {
     background: #e7e7e7;
     border-radius: 50%;
   }
-  .header .header-left .btn-search {
+  .header .header-sec .header-left .btn-search {
     position: initial;
     margin-left: auto;
   }
-  .header .header-left .btn-search svg {
+  .header .header-sec .header-left .btn-search svg {
     width: 1.5rem;
     height: 1.5rem;
   }
-  .header .header-left .header-right {
+  .header .header-right {
     max-width: 140px;
   }
-  .header .header-left .header-right .btn-log {
+  .header .header-right .btn-log {
+    display: none;
+  }
+  .aside-left {
     display: none;
     width: 0;
+  }
+  .container-sec {
+    margin: 10px;
+  }
+  .container-sec .card .container-card .footer-card .fot-card-left {
+    width: 130px;
+  }
+  .container-sec .card .container-card .footer-card .fot-card-left a {
+    width: 60px;
+  }
+  .container-sec .card .container-card .footer-card .fot-card-left a span {
+    display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  .aside-right {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
