--- a/css/style.scss
+++ b/css/style.scss
@@ -12,152 +12,414 @@ html {
 body {
   margin: 0;
   overflow-x: hidden;
-  background: #efefef;
+  min-width: 250px;
 }
 
+// bottones
+.btn-#{log} {
+  border: none;
+  height: 40px;
+  width: 65px;
+  color: #3b49df;
+  background: none;
+}
+.btn-#{account} {
+  border: none;
+  color: white;
+  height: 40px;
+  border-radius: 5px;
+  width: 130px;
+  background: #3b49df;
+}
+.btn-#{account}:hover {
+  background: #323ebe;
+}
+.btn-#{log}:hover {
+  background: rgb(231, 231, 231);
+  border-radius: 5px;
+}
 // seccion Header
 
 .header {
-  display: flex;
-  box-sizing: border-box;
-  border: 1.5px solid rgb(187, 187, 187);
+  background-color: white;
+  border-bottom: 1.5px solid rgb(187, 187, 187);
   max-width: 100vw;
-  align-items: center;
-  position: sticky;
   height: 56px;
-  z-index: 100;
-  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  // display: flex;
+  // justify-content: center;
 
-  .header-left {
-    width: 535px;
+  .header-sec {
     display: flex;
+    margin-left: auto;
+    background-color: white;
+    box-sizing: border-box;
+    border-bottom: 1.5px solid rgb(187, 187, 187);
     align-items: center;
-    .btn-hamburger {
-      display: none;
-    }
-    .logo {
-      margin: 0.5rem;
-      border-radius: 3px;
-      width: 50px;
-      height: 40px;
-      background-color: black;
-      color: white;
-      font-size: 15px;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-    }
-    .search-input {
-      margin-left: 10px;
-      width: 420px;
-      height: 40px;
-      border-radius: 5px;
-      border: 0.5px solid rgb(201, 201, 201);
-    }
-    .search-input:hover {
-      border: 1px solid rgb(136, 136, 136);
-    }
-    .search-input[type="search"]:focus {
-      outline-style: none;
-      border: 2px solid #3b49df;
-    }
-    .btn-search {
-      border: none;
-      background: none;
-      width: 2.3rem;
-      height: 2.3rem;
-      position: relative;
-      right: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      svg {
-        width: 1.5rem;
-        height: 1.5rem;
-      }
-    }
-    .btn-search:hover {
-      background: rgb(231, 231, 231);
-      border-radius: 50%;
-    }
-  }
-  .header-#{right} {
-    width: 240px;
-    height: inherit;
-    margin-right: 1rem;
-    display: flex;
-    align-items: center;
+    height: 56px;
     justify-content: space-between;
-    gap: 15px;
+    //max-width: 1120px;
 
-    .btn-#{log} {
-      border: none;
-      height: 40px;
-      width: 65px;
-      color: #3b49df;
-      background: none;
-    }
-    .btn-#{account} {
-      border: none;
-      color: white;
-      height: 40px;
-      border-radius: 5px;
-      width: 130px;
-      background: #3b49df;
-    }
-    .btn-#{account}:hover {
-      background: #323ebe;
-    }
-    .btn-#{log}:hover {
-      background: rgb(231, 231, 231);
-      border-radius: 5px;
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .header {
     .header-left {
-      .search-input {
-        display: none;
-        width: 0;
-      }
-
+      width: 500px;
+      display: flex;
+      align-items: center;
       .btn-hamburger {
-        display: flex;
-        align-items: center;
-        border: none;
-        height: 40px;
-        width: 40px;
-        background: none;
-        
-        svg {
-          height: 30px;
-          width: 30px;
-        }
+        display: none;
       }
-      .btn-hamburger:hover {
-        background: rgb(231, 231, 231);
-        border-radius: 50%;
+      .logo {
+        margin: 0.5rem;
+        border-radius: 3px;
+        width: 50px;
+        height: 40px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+      .search-input {
+        margin-left: 10px;
+        width: 420px;
+        height: 40px;
+        border-radius: 5px;
+        border: 0.5px solid rgb(201, 201, 201);
+      }
+      .search-input:hover {
+        border: 1px solid rgb(136, 136, 136);
+      }
+      .search-input[type="search"]:focus {
+        outline-style: none;
+        border: 2px solid #3b49df;
       }
       .btn-search {
-        position: initial;
-        margin-left: auto;
+        border: none;
+        background: none;
+        width: 2.3rem;
+        height: 2.3rem;
+        position: relative;
+        right: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         svg {
           width: 1.5rem;
           height: 1.5rem;
         }
       }
-      .header-#{right} {
-        max-width: 140px;
+      .btn-search:hover {
+        background: rgb(231, 231, 231);
+        border-radius: 50%;
+      }
+    }
+    .header-#{right} {
+      width: 240px;
+      height: inherit;
+      margin-right: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 15px;
+    }
+  }
+}
+// container principal
+.container-prin {
+  display: flex;
+}
 
-        .btn-#{log} {
-          display: none;
-          width: 0;
+// aside-left
+.aside-#{left} {
+  height: 100vh;
+  width: 221px;
+  min-width: 220px;
+
+  .dev-com {
+    background-color: white;
+    height: 350px;
+    border-radius: 5px;
+    margin: 5px;
+    border: 0.1px solid rgb(231, 231, 231);
+    padding: 15px;
+    h5 {
+      line-height: 30px;
+      font-size: 19px;
+    }
+    a {
+      font-size: 18px;
+      color: #3b49df;
+      text-decoration: none;
+    }
+    p {
+      color: rgb(66, 64, 64);
+    }
+    .aside-btn {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 5px;
+
+      .btn-#{account} {
+        width: 100%;
+      }
+    }
+  }
+  .list-a {
+    margin: 5px;
+    padding: 15px;
+    div {
+      display: flex;
+      height: 40px;
+
+      span {
+        display: block;
+        width: 40px;
+      }
+      a {
+        text-decoration: none;
+        color: black;
+      }
+    }
+  }
+}
+//aside-right
+.aside-#{right} {
+  height: 100vh;
+  width: 221px;
+  min-width: 220px;
+
+  .dev-is {
+    background-color: white;
+    height: 350px;
+    border-radius: 5px;
+    margin: 5px;
+    border: 0.1px solid rgb(231, 231, 231);
+    padding: 15px;
+  }
+}
+//main
+.container-sec {
+  height: 100vh;
+  width: 100vw;
+  max-width: 650px;
+  min-width: 430px;
+
+  nav {
+    height: 43px;
+    display: flex;
+
+    a {
+      width: 100px;
+      height: 43px;
+      font-size: 1.2rem;
+      color: black;
+      text-decoration: none;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    a:hover {
+      border-radius: 5px;
+      background: rgb(231, 231, 231);
+      color: #323ebe;
+    }
+  }
+  .card {
+    margin-top: 10px;
+    background: white;
+    width: auto;
+    height: 250px;
+    border-radius: 5px;
+    padding: 15px;
+    .div-head {
+      display: flex;
+      align-items: center;
+
+      img {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        margin-right: 15px;
+      }
+      .info-card {
+        display: flex;
+        flex-direction: column;
+        .name-profile {
+          text-decoration: none;
+          color: slategray;
+          font-weight: 600;
+        }
+        span {
+          color: slategray;
+          font-size: small;
+        }
+      }
+    }
+    .container-card {
+      margin-left: 35px;
+      .sub-title {
+        margin-top: 15px;
+
+        a {
+          color: black;
+          text-decoration: none;
+        }
+        a:hover {
+          color: #323ebe;
+        }
+      }
+      .tags {
+        display: flex;
+        align-items: center;
+        height: 40px;
+
+        a {
+          display: flex;
+
+          align-items: center;
+          text-decoration: none;
+          color: slategray;
+          height: 30px;
+          width: 80px;
+        }
+        a:hover {
+          background: rgb(231, 231, 231);
+          border: solid 0.1px rgb(175, 175, 175);
+          border-radius: 5px;
+          color: black;
+        }
+      }
+
+      .card-img {
+      }
+      .footer-card {
+        display: flex;
+        justify-content: space-between;
+
+        .fot-card-left {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 320px;
+
+          a {
+            display: flex;
+            align-items: center;
+
+            text-decoration: none;
+            color: slategray;
+            height: 36px;
+            width: 150px;
+          }
+          a:hover {
+            background-color: rgb(231, 231, 231);
+            border-radius: 5px;
+          }
+        }
+        .fot-card-#{right} {
+          display: flex;
+          align-items: center;
+          gap: 15px;
+          span {
+            color: slategray;
+            font-size: smaller;
+          }
+          .btn-save {
+            height: 36px;
+            width: 50px;
+            border: none;
+            background: #bdbdbd;
+            color: rgb(10, 10, 10);
+            border-radius: 5px;
+          }
+          .btn-save:hover {
+            background-color: #9b9b9b;
+          }
         }
       }
     }
   }
 }
+// media Query
+@media (max-width: 768px) {
+  .header {
+    .header-sec {
+      .header-left {
+        .search-input {
+          display: none;
+          width: 0;
+        }
+
+        .btn-hamburger {
+          display: flex;
+          align-items: center;
+          border: none;
+          height: 40px;
+          width: 40px;
+          background: none;
+
+          svg {
+            height: 30px;
+            width: 30px;
+          }
+        }
+        .btn-hamburger:hover {
+          background: rgb(231, 231, 231);
+          border-radius: 50%;
+        }
+        .btn-search {
+          position: initial;
+          margin-left: auto;
+          svg {
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+        }
+      }
+    }
+    .header-#{right} {
+      max-width: 140px;
+
+      .btn-#{log} {
+        display: none;
+      }
+    }
+  }
+  .aside-#{left} {
+    display: none;
+    width: 0;
+  }
+  .container-sec {
+    margin: 10px;
+  }
+  .container-sec {
+    .card {
+      .container-card {
+        .footer-card {
+          .fot-card-left {
+            width: 130px;
+            a {
+              width: 60px;
+              span {
+                display: none;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1024px) {
+  .aside-#{right} {
+    display: none;
+  }
+  
+}
+
